--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "title":"乐乐lele 电脑科学知识网",
+    "title":"乐乐lele 电脑科学社区",
     "subTitle":"在这里一起讨论，教学，教程，服务",
     "avatarUrl":"https://avatars.githubusercontent.com/u/171937997?v=4",
     "GMEEK_VERSION":"last"
